# aes-poly1305

./: Cargo.toml  README.md
src/: main.rs
